@@ -5,7 +5,8 @@
 New features:
 -------------
 
-- Created a pricing variable type for variables not corresponding to any original variable
+- Generic approach to handle cuts and branching constraints in the master problem with no couterpart in the original problem
+- Created a pricing variable type for variables not corresponding to any original variable, inferred by mastercuts
 
 
 New/modified API functions:
@@ -14,9 +15,17 @@ New/modified API functions:
 - Added function 'GCGcreateInferredPricingVar'
 - Added function 'GCGvarIsInferredPricing'
 - Added function 'GCGmastercutIsActive'
+- Added function 'GCGrelaxBranchNewCol'
+- Added function 'GCGrelaxBranchUpdateDual'
+- Added function 'GCGrelaxBranchUpdateDualWithGCGBranchrule'
+- Added function 'GCGrelaxBranchGetMasterCut'
+- Added function 'GCGrelaxBranchGetAllActiveMasterCuts'
 - Added callback 'GCG_DECL_BRANCHNEWCOL' to 'GCG_BRANCHRULE'
 - Added callback 'GCG_DECL_BRANCHUPDATEDUAL' to 'GCG_BRANCHRULE'
 - Added callback 'GCG_DECL_BRANCHGETMASTERCUT' to 'GCG_BRANCHRULE'
+- Added parameter 'GCG_DECL_BRANCHNEWCOL((*branchnewcol))' to 'GCGrelaxIncludeBranchrule'
+- Added parameter 'GCG_DECL_BRANCHUPDATEDUAL((*branchupdatedual))' to 'GCGrelaxIncludeBranchrule'
+- Added parameter 'GCG_DECL_BRANCHGETMASTERCUT((*branchgetmastercut))' to 'GCGrelaxIncludeBranchrule'
 
 
 Renamed API functions:
